fix: fix for displaying background on tablets

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -38,7 +38,7 @@
   &-info {
     margin-top: 50vh;
     @media (min-width: 768px) {
-      margin-top: 100vh;
+      margin-top: 65vh;
     }
     @include translucent-bg;
 
